crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-11.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [
            Import {
                path: [
                    "a",
                    "b",
                    "c",
                ],
                alias: Some(
                    "x",
                ),
            },
            Import {
                path: [
                    "a",
                    "d",
                    "e",
                ],
                alias: Some(
                    "y",
                ),
            },
        ],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [],
    },
)
