crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-12.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [
        Import {
            path: [
                "a",
                "b",
            ],
            alias: Some(
                "x",
            ),
        },
        Import {
            path: [
                "c",
                "d",
            ],
            alias: Some(
                "y",
            ),
        },
    ],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [],
}
