crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [
            Import {
                path: [
                    "a",
                    "b",
                ],
                alias: None,
            },
        ],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [],
    },
    [],
)
