crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-4.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
Ok(
    Module {
        imports: [
            Import {
                path: [
                    "a",
                    "b",
                ],
                alias: None,
            },
            Import {
                path: [
                    "a",
                    "c",
                ],
                alias: None,
            },
        ],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [],
    },
)
