crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [
        Import {
            path: [
                "a",
                "b",
                "c",
            ],
            alias: None,
        },
        Import {
            path: [
                "a",
                "d",
                "e",
            ],
            alias: None,
        },
    ],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [],
}
