crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: module
---
Module {
    imports: [
        Import {
            path: [
                "a",
                "b",
            ],
            alias: None,
        },
        Import {
            path: [
                "c",
                "d",
            ],
            alias: None,
        },
    ],
    symbols: Symbols {
        fns: {},
        classes: {},
        traits: {},
        aliases: {},
    },
    top_level: [],
}
