crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_imports-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: result
---
(
    Module {
        imports: [
            Import {
                path: [
                    "a",
                ],
                alias: Some(
                    "x",
                ),
            },
        ],
        symbols: Symbols {
            fns: {},
            classes: {},
            traits: {},
            aliases: {},
        },
        top_level: [],
    },
    [],
)
