crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_nested_blocks-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
Block {
    items: [
        Block {
            items: [],
            last: Some(
                Int {
                    value: 0,
                },
            ),
        },
    ],
    last: None,
}
